--- a/index.html
+++ b/index.html
@@ -332,6 +332,17 @@
             opacity: 0.6;
         }
 
+        .logo-container {
+            text-align: center;
+            margin-bottom: 16px;
+        }
+
+        .logo-img {
+            max-width: 120px;
+            height: auto;
+            display: inline-block;
+        }
+
         .alert-info {
             background-color: rgba(99, 102, 241, 0.1);
             border: 1px solid rgba(99, 102, 241, 0.2);
@@ -348,6 +359,9 @@
 <body>
 
     <div class="container">
+        <div class="logo-container">
+            <img src="./logo.png" alt="Logo Calculadora" class="logo-img">
+        </div>
         <h1>Calculadora de Inadimplência</h1>
         <p class="subtitle">Cálculo de Juros e Multa para Mensalidades em Atraso</p>
 
