--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
 
             <div style="display: flex; gap: 12px; margin-top: 8px; margin-bottom: 24px;">
                 <button class="add-btn" onclick="addTitleRow()" style="margin: 0; flex: 2;">
-                    <span>+</span> Adicionar Título
+                    <span>+</span> Adicionar Boleto
                 </button>
                 <button class="secondary-btn" onclick="clearAllRows()"
                     style="flex: 1; border-color: var(--danger); color: var(--danger);">
