--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Inadimplência</title>
+    <title>Calc Inadimplência</title>
 
     <!-- PWA Configuration -->
     <link rel="manifest" href="./manifest.json">
@@ -1183,5 +1183,6 @@
         }
     </script>
 </body>
+
 
 </html>
