--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             <!-- Logo will be inverted via CSS filter in light mode -->
             <img src="./logo.png" alt="Logo Calculadora" class="logo-img">
         </div>
-        <h1>Calculadora de Inadimplência</h1>
+        <h1>Calc Inadimplência</h1>
         <p class="subtitle">Cálculo de Juros e Multa para Mensalidades em Atraso</p>
 
         <!-- Main Content (Calculator) -->
@@ -1186,3 +1186,4 @@
 
 
 </html>
+
