--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calc Inadimplência</title>
+    <title>Calculadora de Inadimplência</title>
 
     <!-- PWA Configuration -->
     <link rel="manifest" href="./manifest.json">
@@ -632,7 +632,7 @@
             <!-- Logo will be inverted via CSS filter in light mode -->
             <img src="./logo.png" alt="Logo Calculadora" class="logo-img">
         </div>
-        <h1>Calc Inadimplência</h1>
+        <h1>Calculadora de Inadimplência</h1>
         <p class="subtitle">Cálculo de Juros e Multa para Mensalidades em Atraso</p>
 
         <!-- Main Content (Calculator) -->
@@ -1186,4 +1186,5 @@
 
 
 </html>
+
 
